[package]
name = "rohan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
openapiv3 = "2.0"
genai = "0.4.4" 
anyhow = "1.0"
boa_engine = "0.19"
boa_gc = "0.19"
futures = "0.3"
indicatif = "0.17"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.10"